[tool.poetry]
name = "exorad"
version = "2.1.121"
description = "The generic point source radiometric model"
authors = ["Lorenzo V. Mugnai <lorenzo.mugnai@uniroma1.it>"]
license = "BSDv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
astropy = "^5.3.3"
mpmath = "^1.3.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scipy = ">=1.11.3,<1.14"
h5py = "^3.9.0"
xlrd = "1.2.0"
xlwt = "^1.3.0"
requests = "^2.31.0"
photutils = "^1.9.0"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
codecov = "^2.1.13"
flake8 = "^6.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
